# rust-aws-lambda

compressor/: Cargo.toml
compressor/.cargo/: config
compressor/src/: main.rs
division_calculator/: Cargo.toml
division_calculator/src/: main.rs
