[package]
name = "compressor"
version = "0.1.0"
authors = ["mzumi <masazumi.m@gmail.com>"]
edition = "2018"

[dependencies]
lambda_runtime = "^0.1"
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
log = "^0.4"
simple_logger = "^1"
zip = "^0.5"
rusoto_core = { version = "0.36.0", default_features = false, features = ["rustls"] }
rusoto_s3 = { version = "0.36.0", default_features = false, features = ["rustls"] }
flate2 = "1.0"
futures = "0.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
